<resources>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="package_name" translatable="false">edu.princeton.jrpalmer.asmlibrary</string>
    <string name="internal_message_id" translatable="false">edu.princeton.jrpalmer.asmlibrary</string>
    <string name="content_provider_authority_uploadqueue" translatable="false">edu.princeton.jrpalmer.asmlibrary.uploadqueueprovider</string>
    <string name="content_provider_authority_fixes" translatable="false">edu.princeton.jrpalmer.asmlibrary.spacemapperfixprovider</string>
    <string name="warning_calendar_start_date">Note: You have picked a start date that is after your end date. Change one or the other if you want to view data on the map.</string>
    <string name="warning_calendar_end_date">Note: You have picked an end date that is before your start date. Change one or the other if you want to view data on the map.</string>
    <string name="save_db_label">Submit</string>
    <string name="pro_welcome">You have just been given a free upgrade to Space Mapper Pro. You can stop participating in the Activity-Space Project at any time by changing the Participation settings on your Preferences menu.\n\nThank you very much!</string>
    <string name="dbq_battery_prompt">Did you have problems with your phone’s battery life while running the application?</string>
    <string name="db_howfound_friend">From a friend or acquaintance</string>
    <string name="db_howfound_ad">From an advertisement</string>
    <string name="db_howfound_market">On Google Play</string>
    <string name="db_howfound_other">Other</string>
    <string name="db_heading">Survey</string>
    <string name="db_subheading">If you have a moment, we would appreciate your feedback!</string>
    <string name="dbq_howfound_prompt">How did you hear about this application? (Check all that apply.)</string>
    <string name="dbq_friends_prompt">Do you know anyone else who used the application?</string>
    <string name="dbq_behavior1_prompt">Do you think that having the application running on your phone caused you to change your behavior at all? </string>
    <string name="dbq_behavior2_prompt">Did you think about the fact that the application was running while you went about your daily activities?</string>
    <string name="proconversion_notification_initial">Space Mapper upgrade</string>
    <string name="proconversion_notification_subject">Space Mapper upgrade</string>
    <string name="proconversion_notification">You have a received a free upgrade to Space Mapper Pro.</string>
    <string name="offline_warning">You are offline. Please check your internet connection and try again.</string>
    <string name="uploading">Uploading</string>
    <string name="location">location</string>
    <string name="locations">locations</string>
    <string name="thank_you_for_participating">Thank you for participating!</string>
    <string name="map_settings">Map Settings</string>
    <string name="start_date_heading">Start Date</string>
    <string name="start_date">start date</string>
    <string name="limit_start_date">Limit map start date?</string>
    <string name="end_date_heading">End Date</string>
    <string name="end_date_text">Limit map end date?</string>
    <string name="end_date">End Date</string>
    <string name="sat">Satellite</string>
    <string name="use_sat_q">Use satellite image?</string>
    <string name="acc">Accuracy</string>
    <string name="toggleacc_q">Display accuracy circles?</string>
    <string name="icons">Icons</string>
    <string name="display_icons_q">Display location icons?</string>
    <string name="data_settings_label">Data Settings</string>
    <string name="storage_size_heading">User Data \nSize</string>
    <string name="volunteer">Volunteer?</string>
    <string name="share_data_text">Share data with \nresearchers?</string>
    <string name="participation_heading">Participation</string>
    <string name="participation_time_label">Total participation time:</string>
    <string name="nlocations_shared_label">Number of locations shared:</string>
    <string name="pending_uploads_heading">Pending \nUploads</string>
    <string name="files_deleted">files deleted</string>
    <string name="locations_deleted">locations deleted</string>
    <string name="calculating">calculating</string>
    <string name="available">available</string>
    <string name="used">used</string>
    <string name="present">present</string>
    <string name="withdraw_message_pro">You have successfully withdrawn from the study. You can return to it at any time in the preferences menu. Thank you for your interest and participation.</string>
    <string name="filenameprefix_map">mySpaceMapperMap</string>
    <string name="filenameprefix_csv">mySpaceMapperLocations</string>
    <string name="more_info">More Information</string>
    <string name="currently_sharing">You are currently sharing data with the activity-space project. This setting may be changed after you have participated for at least one week and shared at least 1,000 location fixes.</string>
    <string name="stats_button">Statistics</string>
    <string name="menu_asp">Activity-Space Project</string>
    <string name="saving_data">Saving data.</string>
    <string name="database_updating_text">Updating database. Please wait...</string>
    <string name="mapdata_loading_text">Loading location data.</string>
    <string name="first_station_time_label">"First: "</string>
    <string name="latest_station_time_label">"Latest: "</string>
    <string name="tracking_notification_initial">Tracking your activity-space</string>
    <string name="tracking_notification">Tracking your activity-space.</string>
    <string name="tracking_notification_subject">Space Mapper Tracking</string>
    <string name="menu_flush_gps">Refresh GPS</string>
    <string name="renew_gps_alert">Would you like to delete and download new A-GPS data? Doing so may improve GPS performance if you currently have a good data connection and your GPS appears to be stuck. However, you may experience a delay in GPS location estimates, particularly if your data connection is slow.</string>
    <string name="first_fix_time">First Spacetime Point:</string>
    <string name="last_fix_time">Last Spacetime Point:</string>
    <string name="progress_text">Loading spacetime data. Please wait...</string>
    <string name="message_store_data">Store My Data is currently off. Please go to the Preferences menu and turn it on if you would like to create a lifeline.</string>
    <string name="message_no_data">You do not yet have enough data to build a lifeline. Collect at least two location estimates and then try again.</string>
    <string name="toggle_zax">Toggle Time Axis</string>
    <string name="toggle_xyax">Toggle Space Axes</string>
    <string name="lifeline_button">Spacetime</string>
    <string name="made_with_SM">Made with Space Mapper</string>
    <string name="menu_share">Share App</string>
    <string name="share_with">Share with</string>
    <string name="rate_heading">Rate Space Mapper</string>
    <string name="rate_no">No, thanks</string>
    <string name="rate_later">Remind me later</string>
    <string name="rate_yes">Rate Space Mapper</string>
    <string name="rate_prompt">If you enjoy using Space Mapper, please take a moment to rate it. Thanks for your support!</string>
    <string name="menu_rate">Rate App</string>
    <string name="menu_map_save">Save Map</string>
    <string name="menu_map_share">Share Map</string>
    <string name="menu_map_settings">Map Settings</string>
    <string name="heading_map_interval">Map Interval</string>
    <string name="text_map_interval_spinner">Map locations during last: </string>
    <string name="my_location">Location</string>
    <string name="data_SD_error">Error writing file to SD card.</string>
    <string name="data_SD_unavailable">SD Card Not Available - file cannot be saved.</string>
    <string name="data_saved">Data saved as </string>
    <string name="withdraw_error">All Space Mapper data has been deleted from your phone, but an error occurred while trying to contact the Space Mapper server. Please check your internet connection and try again.</string>
    <string name="cancel">Cancel</string>
    <string name="withdraw_warning_yes">Yes, withdraw and delete data now</string>
    <string name="withdraw_warning">WARNING: All of the Space Mapper data you have saved on your phone\'s internal memory and all data sent to the Space Mapper server will be deleted. This cannot be undone. Are you sure you wish to proceed?</string>
    <string name="new_fix_blinker">New Fix!</string>
    <string name="time_label">Time and Date: </string>
    <string name="lat_label">Latitude: </string>
    <string name="lon_label">Longitude: </string>
    <string name="alt_label">Altitude (m): </string>
    <string name="acc_label">Accuracy (m): </string>
    <string name="prov_label">Provider: </string>
    <string name="list_my_data_heading">My Data List</string>
    <string name="list_data_button">View Raw Data</string>
    <string name="my_data_heading">My Data</string>
    <string name="GPL">View GPL</string>
    <string name="LGPL">View LGPL</string>
    <string name="menu_center_map">Re-Center</string>
    <string name="menu_toggle_view">Toggle Sat./Map</string>
    <string name="data_off_alert">Store My Data is currently off. Click here to go to the Preferences menu and turn it on</string>
    <string name="noGPSAlert">"Your GPS receiver is disabled. Do you want to enable it?".</string>
    <string name="noGPSnoNetAlert">Your GPS and network location receivers are both disabled. Space Mapper will not be able to locate without at least one of these. Do you want to enable them?</string>
    <string name="noGPS">Your GPS receiver is off. \nPlease click here to turn it on.</string>
    <string name="noGPSnoNet">Space Mapper cannot locate you because your GPS and network location receivers are both off. \nPlease click here to turn them on.</string>
    <string name="consent_date_prompt">You indicated your consent by clicking the Consent button at the time and date shown below. You may withdraw your consent at any time by using the Activity-Space Project/Withdraw menu.</string>
    <string name="delete_mydata_query">Would you like to delete any Space Mapper data already stored on your phone?</string>
    <string name="more_data_later">More data analysis tools will be included in future updates</string>
    <string name="help">Help</string>
    <string name="user_guide">User Guide</string>
    <string name="faqs">FAQs</string>
    <string name="about">About</string>
    <string name="review_consent">Consent Form</string>
    <string name="contact">Contact</string>
    <string name="withdraw_consent">Withdraw</string>
    <string name="contact_heading">Contact</string>
    <string name="thanks_for_interest">Thank you for your interest!</string>
    <string name="ok">OK</string>
    <string name="underage_message">You must be at least 18 to volunteer as a Space Mapper research subject, but you are welcome to visit our website to learn more or to contact us with any questions or suggestions.</string>
    <string name="project_website">www.princeton.edu/~jrpalmer/spacemapper</string>
    <string name="project_email">activity.space.project@gmail.com</string>
    <string name="menu_locate_now">Locate Now</string>
    <string name="menu_upload_now">Upload Now</string>
    <string name="intro_button_over">I am at least 18 years old</string>
    <string name="intro_button_under">I am under 18 years old.</string>
    <string name="intro_heading">Welcome to Space Mapper</string>
    <string name="intro_subheading">Introduction</string>
    <string name="main_text_off">Space Mapper is off. \nClick here to turn it back on.</string>
    <string name="user_id">User ID:</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
</resources>