<?xml version="1.0" encoding="utf-8"?>
<!--
 * Space Mapper
 * Copyright (C) 2012, 2013 John R.B. Palmer
 * Contact: jrpalmer@princeton.edu
 * 
 * This file is part of Space Mapper.
 * 
 * Space Mapper is free software: you can redistribute it and/or modify 
 * it under the terms of the GNU General Public License as published by 
 * the Free Software Foundation, either version 3 of the License, or (at 
 * your option) any later version.
 * 
 * Space Mapper is distributed in the hope that it will be useful, but 
 * WITHOUT ANY WARRANTY; without even the implied warranty of 
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  
 * See the GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License along 
 * with Space Mapper.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/db_heading"
        android:textColor="@color/TopHeadings"
        android:textSize="@dimen/heading_size"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/db_subheading" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/dark_yellow" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/surveypads" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dbq_howfound_prompt"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <CheckBox
                android:id="@+id/dbHowFoundFriendBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/db_howfound_friend" />

            <CheckBox
                android:id="@+id/dbHowFoundAdBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/db_howfound_ad" />

            <CheckBox
                android:id="@+id/dbHowFoundMarketBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/db_howfound_market" />

            <CheckBox
                android:id="@+id/dbHowFoundOtherBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/db_howfound_other" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@drawable/divider_gradient" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dbq_friends_prompt"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/dbqFriendsRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/dbqFriendsYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" >
                </RadioButton>

                <RadioButton
                    android:id="@+id/dbqFriendsNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no" >
                </RadioButton>
            </RadioGroup>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@drawable/divider_gradient" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dbq_battery_prompt"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/dbqBatteryRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/dbqBatteryYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" >
                </RadioButton>

                <RadioButton
                    android:id="@+id/dbqBatteryNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no" >
                </RadioButton>
            </RadioGroup>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@drawable/divider_gradient" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dbq_behavior1_prompt"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/dbqBehavior1RadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/dbqBehavior1Yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" >
                </RadioButton>

                <RadioButton
                    android:id="@+id/dbqBehavior1No"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no" >
                </RadioButton>
            </RadioGroup>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@drawable/divider_gradient" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dbq_behavior2_prompt"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/dbqBehavior2RadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/dbqBehavior2Yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" >
                </RadioButton>

                <RadioButton
                    android:id="@+id/dbqBehaviorNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no" >
                </RadioButton>
            </RadioGroup>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@drawable/divider_gradient" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp" >

                <Button
                    android:id="@+id/dbSaveButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/save_db_label" />

                <Button
                    android:id="@+id/dbCancelButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>