<?xml version="1.0" encoding="utf-8"?>
<!--
 * Space Mapper
 * Copyright (C) 2012, 2013 John R.B. Palmer
 * Contact: jrpalmer@princeton.edu
 * 
 * This file is part of Space Mapper.
 * 
 * Space Mapper is free software: you can redistribute it and/or modify 
 * it under the terms of the GNU General Public License as published by 
 * the Free Software Foundation, either version 3 of the License, or (at 
 * your option) any later version.
 * 
 * Space Mapper is distributed in the hope that it will be useful, but 
 * WITHOUT ANY WARRANTY; without even the implied warranty of 
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  
 * See the GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License along 
 * with Space Mapper.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="8dip"
        android:text="@string/menu_asp"
        android:textColor="@color/TopHeadings"
        android:textSize="@dimen/heading_size"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/surveypads" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_id" >
        </TextView>

        <TextView
            android:id="@+id/userIDText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center" >
        </TextView>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/dark_yellow" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/FAQSelector"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/surveypads"
                android:text="@string/faqs"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@drawable/divider_gradient" />

            <TextView
                android:id="@+id/contactSelector"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/surveypads"
                android:text="@string/contact"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@drawable/divider_gradient" />

            <TextView
                android:id="@+id/reviewConsentSelector"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/surveypads"
                android:text="@string/review_consent"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@drawable/divider_gradient" />

            <TextView
                android:id="@+id/withdrawSelector"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/surveypads"
                android:text="@string/withdraw_consent"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@drawable/divider_gradient" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>